FIx test build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ target_include_directories(flow-core
 if(MSVC)
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
   target_compile_options(flow-core PRIVATE /W4)
-  target_link_libraries(flow-core PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(flow-core PUBLIC nlohmann_json::nlohmann_json)
 else()
   target_compile_options(flow-core PRIVATE -Wall -Wextra -Wpedantic -Werror)
   if(APPLE)
