--- a/cabin.toml
+++ b/cabin.toml
@@ -5,5 +5,5 @@ authors = ["Tomas Rigaux <trigaux@cisco.com>"]
 edition = "20"
 
 [dependencies]
-json = { branch = "cabin-pkg", git = "https://github.com/GhostofCookie/json.git" }
-thread_pool = { branch = "cabin-pkg", git = "https://github.com/GhostofCookie/thread-pool.git" }
+json = { git = "https://github.com/nlohmann/json.git" }
+thread_pool = { git = "https://github.com/bshoshany/thread-pool.git" }
