--- a/cabin.toml
+++ b/cabin.toml
@@ -1,7 +1,7 @@
 [package]
 name = "flow-core"
-version = "0.1.0"
-authors = ["Tomas Rigaux <trigaux@cisco.com>"]
+version = "1.1.1"
+authors = ["Scott Henning <shenning@cisco.com>", "Tomas Rigaux <trigaux@cisco.com>"]
 edition = "20"
 
 [dependencies]
