Formalise modules and fix NodeData (#13)
* Formalise modules and improve some header includes.

* Fix linux and mac.

* Access modules on loading.

* Improve modules and add testing.

* Fix bad getters.

* Better errors for module.

* Added way of loading module.

* Fix unix.

* FIx bad unload logic.

* Try making action run as many in parallel as possible

* Prompt runners.

* Bunch of updates and cleanup.

* Fix bad handle.

* Fix bad assign for const reference data.

* Fix data set for const types.

* Add function wrapper node.

* FIx node data for difference reference types and generalise conversions.

* Appease unix compilers.

* Implement function.

* Fix ubuntu.

* Try fix awkward definition ordering.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,6 @@ endif()
 
 option(flow-core_BUILD_TESTS "Build tests - requires gtest" OFF)
 option(flow-core_INSTALL "Add installation targets" OFF)
-option(flow-core_USE_EXTERNAL_JSON "Use an external JSON library" OFF)
 
 # -----------------------------------------------------------------------------
 # Dependencies
@@ -42,6 +41,7 @@ add_library(${PROJECT_NAME} SHARED
   src/Connections.cpp
   src/Env.cpp
   src/Graph.cpp
+  src/Module.cpp
   src/Node.cpp
   src/NodeFactory.cpp
   src/Port.cpp
@@ -72,7 +72,7 @@ if(APPLE)
   )
 elseif(MSVC)
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
-  target_compile_options(${PROJECT_NAME} PRIVATE /W4)
+  target_compile_options(${PROJECT_NAME} PRIVATE /W4 /MP)
   target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
 else()
   target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
