Cross platform test module build.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,12 @@ if (NOT GTest_FOUND)
 endif()
 
 #=============================================================================#
+# Test Module
+#=============================================================================#
+
+add_subdirectory(test_module)
+
+#=============================================================================#
 # Test Executable
 #=============================================================================#
 
@@ -59,14 +65,6 @@ if(MSVC)
         $<TARGET_FILE_DIR:flow_core_tests>
   )
 endif()
-
-add_custom_command(
-    TARGET flow_core_tests
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-            "${CMAKE_CURRENT_SOURCE_DIR}/test_module.flowmod"
-            "$<TARGET_FILE_DIR:flow_core_tests>/test_module.flowmod"
-)
 
 include(GoogleTest)
 gtest_discover_tests(flow_core_tests)
