Fix bad module zip.

--- a/tests/test_module/CMakeLists.txt
+++ b/tests/test_module/CMakeLists.txt
@@ -46,7 +46,7 @@ get_filename_component(lib_file $<TARGET_FILE:${PROJECT_NAME}> NAME)
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy
   $<TARGET_FILE:${PROJECT_NAME}>
-  $<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}/${MODULE_BINARY_DIR}/${PROJECT_NAME}.${CMAKE_SHARED_LIBRARY_SUFFIX}
+  $<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}/${MODULE_BINARY_DIR}/${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX}
 )
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
   COMMAND ${CMAKE_COMMAND} -E copy
