--- a/tests/test_module/CMakeLists.txt
+++ b/tests/test_module/CMakeLists.txt
@@ -21,44 +21,12 @@ add_dependencies(${PROJECT_NAME} flow-core)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(${PROJECT_NAME} PUBLIC flow-core)
 
-if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-  set(MODULE_BINARY_DIR "linux")
-elseif(CMAKE_SYSTEM_NAME STREQUAL "Darwin") # macOS uses Darwin as its kernel name
-  set(MODULE_BINARY_DIR "macos")
-elseif(CMAKE_SYSTEM_NAME STREQUAL "Windows")
-  set(MODULE_BINARY_DIR "windows")
-else()
-  message(FATAL_ERROR "Unsupported platform: ${CMAKE_SYSTEM_NAME}")
-endif()
+include(../../cmake/FlowModule.cmake)
+CreateFlowModule(${PROJECT_NAME})
 
-if (${CMAKE_SYSTEM_PROCESSOR} MATCHES "^(x86_64|amd64|AMD64)$")
-  set(MODULE_BINARY_DIR "${MODULE_BINARY_DIR}/x86_64")
-elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "^(arm64|aarch64)$")
-  set(MODULE_BINARY_DIR "${MODULE_BINARY_DIR}/arm64")
-elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "^(i386|i686)$")
-  set(MODULE_BINARY_DIR "${MODULE_BINARY_DIR}/x86")
-else()
-  message(FATAL_ERROR "Unsupported architecture: ${CMAKE_SYSTEM_PROCESSOR}")
-endif()
-
-
-get_filename_component(lib_file $<TARGET_FILE:${PROJECT_NAME}> NAME)
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy
-  $<TARGET_FILE:${PROJECT_NAME}>
-  $<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}/${MODULE_BINARY_DIR}/${PROJECT_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX}
-)
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy
-  ${CMAKE_CURRENT_SOURCE_DIR}/module.json
-  $<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}/module.json
-)
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy
-  ${CMAKE_CURRENT_SOURCE_DIR}/README.md
-  $<TARGET_FILE_DIR:${PROJECT_NAME}>/${PROJECT_NAME}/README.md
-)
-
-add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E tar cfv ${CMAKE_CURRENT_BINARY_DIR}/../${PROJECT_NAME}.flowmod --format=zip ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}
+add_custom_command(TARGET ${PROJECT_NAME}
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod
+    $<TARGET_FILE_DIR:flow_core_tests>
 )
