Try fixing windows test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,12 +11,6 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 CPMAddPackage("gh:google/googletest@1.15.2")
 
 #=============================================================================#
-# Add Test Module
-#=============================================================================#
-
-add_subdirectory(test_module)
-
-#=============================================================================#
 # Test Executable
 #=============================================================================#
 
@@ -54,6 +48,16 @@ if(MSVC)
         $<TARGET_FILE_DIR:${TEST_EXE}>
   )
 endif()
+
+#=============================================================================#
+# Add Test Module
+#=============================================================================#
+
+add_subdirectory(test_module)
+
+#=============================================================================#
+# Discover tests
+#=============================================================================#
 
 include(GoogleTest)
 gtest_discover_tests(${TEST_EXE})
