--- a/tests/test_module/CMakeLists.txt
+++ b/tests/test_module/CMakeLists.txt
@@ -25,6 +25,6 @@ include(../../cmake/FlowModule.cmake)
 CreateFlowModule(${PROJECT_NAME})
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod $<TARGET_FILE_DIR:flow_core_tests>
-  COMMENT "Copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod to $<TARGET_FILE_DIR:flow_core_tests>"
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod ${CMAKE_BINARY_DIR}/tests
+  COMMENT "Copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod to ${CMAKE_BINARY_DIR}/tests"
 )
