Cleanup and add module licence.

--- a/tests/test_module/CMakeLists.txt
+++ b/tests/test_module/CMakeLists.txt
@@ -21,7 +21,7 @@ add_dependencies(${PROJECT_NAME} flow-core)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(${PROJECT_NAME} PUBLIC flow-core)
 
-include(../../cmake/FlowModule.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/FlowModule.cmake)
 CreateFlowModule(${PROJECT_NAME})
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
