--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,6 +51,12 @@ jobs:
         # Build your program with the given configuration
         run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --parallel 18
 
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test Module
+          path: ${{github.workspace}}/build/tests/test_module.fmod
+
       - name: Test
         working-directory: ${{github.workspace}}/build
         # Execute tests defined by the CMake configuration.
