--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: Test Module
+          name: Test Module (${{matrix.os}})
           path: ${{github.workspace}}/build/tests/test_module.fmod
 
       - name: Test
