--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Copyright (c) 2024, Cisco Systems, Inc.
+# All rights reserved.
+
 cmake_minimum_required(VERSION 3.10)
 
 project(flow-core VERSION 1.1.1 LANGUAGES CXX)
@@ -15,8 +18,9 @@ endif()
 # Options
 # -----------------------------------------------------------------------------
 
-option(flow-core_BUILD_TESTS "Build tests - requires gtest" OFF)
-option(flow-core_INSTALL "Add installation targets" OFF)
+option(${PROJECT_NAME}_BUILD_TESTS "Build tests (gtest)" OFF)
+option(${PROJECT_NAME}_BUILD_TOOLS "Build tools" OFF)
+option(${PROJECT_NAME}_INSTALL "Add installation targets" OFF)
 
 # -----------------------------------------------------------------------------
 # Dependencies
@@ -26,15 +30,21 @@ include(cmake/CPM.cmake)
 
 CPMAddPackage("gh:nlohmann/json@3.11.3")
 CPMAddPackage("gh:bshoshany/thread-pool@5.0.0")
+CPMAddPackage("gh:Lecrapouille/zipper@3.0.0")
+set_target_properties(zipper PROPERTIES
+    CXX_STANDARD 20
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
+)
 
 # -----------------------------------------------------------------------------
 # Library
 # -----------------------------------------------------------------------------
 
-set(flow-core_HEADERS_DIR "${CMAKE_CURRENT_LIST_DIR}/include")
-file(GLOB flow-core_HEADERS "${flow-core_HEADERS_DIR}/flow/core/*.hpp")
+set(${PROJECT_NAME}_HEADERS_DIR "${CMAKE_CURRENT_LIST_DIR}/include")
+file(GLOB ${PROJECT_NAME}_HEADERS "${${PROJECT_NAME}_HEADERS_DIR}/flow/core/*.hpp")
 file(GLOB thread-pool_HEADERS "${thread-pool_SOURCE_DIR}/include/*.hpp")
-list(APPEND ${flow-core_HEADERS} ${thread-pool_HEADERS})
+list(APPEND ${${PROJECT_NAME}_HEADERS} ${thread-pool_HEADERS})
 
 add_library(${PROJECT_NAME} SHARED
   src/Connection.cpp
@@ -48,10 +58,11 @@ add_library(${PROJECT_NAME} SHARED
   src/TypeConversion.cpp
   src/UUID.cpp
 
-  ${flow-core_HEADERS}
+  ${${PROJECT_NAME}_HEADERS}
 )
 
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+target_compile_definitions(${PROJECT_NAME} PRIVATE FLOW_CORE_EXPORT)
 
 target_include_directories(${PROJECT_NAME}
   PUBLIC
@@ -68,31 +79,36 @@ if(APPLE)
   target_link_libraries(${PROJECT_NAME} PUBLIC
     "-framework CoreFoundation"
     pthread
-    nlohmann_json::nlohmann_json
   )
 elseif(MSVC)
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
   target_compile_options(${PROJECT_NAME} PRIVATE /W4 /MP)
-  target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
 else()
   target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
   target_link_libraries(${PROJECT_NAME} PUBLIC
     dl
     pthread
     uuid
-    nlohmann_json::nlohmann_json
   )
 endif()
+
+target_link_libraries(${PROJECT_NAME} PUBLIC
+  nlohmann_json::nlohmann_json
+)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+  zipper
+)
 
 # -----------------------------------------------------------------------------
 # Install
 # -----------------------------------------------------------------------------
 
-if(flow-core_INSTALL)
+if(${PROJECT_NAME}_INSTALL)
   set(export_destination "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}")
   set(export_targets ${PROJECT_NAME})
 
-  if (NOT flow-core_USE_EXTERNAL_JSON)
+  if (NOT ${PROJECT_NAME}_USE_EXTERNAL_JSON)
     list(APPEND export_targets nlohmann_json)
   endif()
 
@@ -131,7 +147,15 @@ endif()
 # Tests
 # -----------------------------------------------------------------------------
 
-if (flow-core_BUILD_TESTS)
+if (${PROJECT_NAME}_BUILD_TESTS)
   enable_testing()
   add_subdirectory(tests)
+endif()
+
+# -----------------------------------------------------------------------------
+# Tools
+# -----------------------------------------------------------------------------
+
+if (${PROJECT_NAME}_BUILD_TOOLS)
+  add_subdirectory(tools)
 endif()
