--- a/tests/test_module/CMakeLists.txt
+++ b/tests/test_module/CMakeLists.txt
@@ -21,10 +21,10 @@ add_dependencies(${PROJECT_NAME} flow-core)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(${PROJECT_NAME} PUBLIC flow-core)
 
-# Not typical of a module, but required for these unit tests
-add_custom_command(TARGET ${PROJECT_NAME}
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy
-    ${CMAKE_CURRENT_SOURCE_DIR}/test_module.flowmod
-    $<TARGET_FILE_DIR:test_module>
+include(${CMAKE_SOURCE_DIR}/cmake/FlowModule.cmake)
+CreateFlowModule(${PROJECT_NAME})
+
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod ${CMAKE_BINARY_DIR}/tests
+  COMMENT "Copy ${CMAKE_CURRENT_BINARY_DIR}/test_module.fmod to ${CMAKE_BINARY_DIR}/tests"
 )
