Some cleanup and improvements, added benchmarks.

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,7 +23,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
 
     runs-on: ${{ matrix.os }}
     continue-on-error: true
@@ -50,6 +50,68 @@ jobs:
           name: Test Module (${{matrix.os}})
           path: ${{github.workspace}}/build/tests/test_module.fmod
 
+      - name: Cache Build Output
+        uses: actions/cache@v4
+        with:
+          path: ${{github.workspace}}/build
+          key: ${{matrix.os}}-build-${{github.sha}}
+
+  test:
+    needs: build
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore build output cache
+        uses: actions/cache@v4
+        with:
+          path: ${{github.workspace}}/build
+          key: ${{matrix.os}}-build-${{github.sha}}
+
       - name: Test
         working-directory: ${{github.workspace}}/build
         run: ctest -C ${{env.BUILD_TYPE}} --output-on-failure
+
+  benchmark:
+    needs: build
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - name: Restore build output cache
+        uses: actions/cache@v4
+        with:
+          path: ${{github.workspace}}/build
+          key: ${{matrix.os}}-build-${{github.sha}}
+
+      - name: Benchmark
+        run: ${{github.workspace}}/build/benchmark/flow_core_bench
+
+  cleanup_cache:
+    needs: [test, benchmark]
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+
+    runs-on: ${{ matrix.os }}
+    continue-on-error: true
+    timeout-minutes: 10
+    env:
+      GH_TOKEN: ${{ github.token }}
+      GH_REPO: ${{ github.repository }}
+
+    if: always() # Run even if previous jobs failed
+    steps:
+      - name: Delete Cache
+        run: |
+          gh cache delete ${{matrix.os}}-build-${{github.sha}}
